Update all URLs to be either relative or absolute
Update all URLs to be either relative or absolute
As the site might be hosted as a subfolder,
not necessarily at root on a server

--- a/starter-kit/_config.yml
+++ b/starter-kit/_config.yml
@@ -21,7 +21,8 @@ sass:
   style: compressed
 
 # Site Data
-url: https://yizeng.github.io/jekyll-theme-simple-texture
+url: # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: # the subpath of your site, e.g. /myapp
 title: Simple Texture
 description: "A gem-based responsive simple texture styled Jekyll theme."
 keywords: 'jekyll,theme,gem-based,blog'
