Make homepage more customizable and add a GitHub link to it
Make homepage more customizable and add a GitHub link to it

--- a/starter-kit/_config.yml
+++ b/starter-kit/_config.yml
@@ -48,9 +48,9 @@ author:
     - name: vk
       url:
 home:
-  h1: Simple Texutre
-  h2: A gem-based responsive simple texture styled Jekyll theme
-  h3:
+  section1: <h1>Simple Texutre</h1>
+  section2: <h2>A gem-based responsive simple texture styled Jekyll theme</h2>
+  section3: <div class="social-links"><a class="ico-github" href="https://github.com/yizeng/jekyll-theme-simple-texture" style="opacity:1;filter\:alpha(opacity=100);" title="View on GitHub"></a></div>
 blog:
   cc_license: http://creativecommons.org/licenses/by-sa/4.0/ # A link to CC License
   cc_license_image: /assets/images/theme/cc-by-sa.png # Choose one at https://creativecommons.org/choose/
