--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ author:
 home:
   section1: <h1>Simple Texutre</h1>
   section2: <h2>A gem-based responsive simple texture styled Jekyll theme</h2>
-  section3: <div class="social-links"><a class="ico-github" href="https://github.com/yizeng/jekyll-theme-simple-texture" style="opacity:1;filter\:alpha(opacity=100);" title="View on GitHub"></a></div>
+  section3: <div class="social-links"><a class="ico-github" href="https://github.com/yizeng/jekyll-theme-simple-texture" title="View on GitHub"></a></div>
 blog:
   cc_license: http://creativecommons.org/licenses/by-sa/4.0/ # A link to CC License
   cc_license_image: /assets/images/theme/cc-by-sa.png # Choose one at https://creativecommons.org/choose/
