--- a/starter-kit/_data/i18n.yml
+++ b/starter-kit/_data/i18n.yml
@@ -18,6 +18,7 @@ en:
   search_not_found: 'Oh shucks<br/><small>Nothing found :(</small>'
   search_placeholder: 'Search...'
   search_results: 'Search results'
+  share_post: 'Share Post:'
   show: 'Show'
   show_comments: 'Show Comments'
   tags: 'Tags'
@@ -42,6 +43,7 @@ cn:
   search_not_found: '啊哈<br/><small>什么也没找到 :(</small>'
   search_placeholder: '搜索...'
   search_results: '搜索结果'
+  share_post: '分享本文：'
   show: '显示'
   show_comments: '显示评论'
   tags: '文章标签'
