--- a/starter-kit/_data/i18n.yml
+++ b/starter-kit/_data/i18n.yml
@@ -8,6 +8,8 @@ en:
   enter_blog: 'Enter Blog'
   last_updated: 'Last updated'
   menu: 'Menu'
+  more: 'More'
+  next_post: 'Next Post'
   notice_no_js: 'This site requires JavaScript. Here are the instructions <a href="http://www.enable-javascript.com/" target="_blank">how to enable JavaScript in your web browser</a>.'
   notice_old_ie: 'You are using an outdated browser. Please <a href="http://browsehappy.com/" target="_blank">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true" target="_blank">activate Google Chrome Frame</a> to improve your experience.'
   page_404_content: 'You will be redirected to <a href="/">homepage</a> in few seconds.'
@@ -20,7 +22,9 @@ en:
   search_results: 'Search results'
   share_post: 'Share Post:'
   show: 'Show'
+  show_author: 'Show Author'
   show_comments: 'Show Comments'
+  show_license: 'Show License'
   tags: 'Tags'
   view: 'View'
 cn:
@@ -33,10 +37,13 @@ cn:
   enter_blog: '进入博客'
   last_updated: '最后更新于'
   menu: '菜单'
+  more: '更多'
+  next_post: '下一篇'
   notice_no_js: '本网站需要 JavaScript。请查阅指南来<a href="http://www.enable-javascript.com/" target="_blank">给您的浏览器开启 JavaScript 功能</a>。'
   notice_old_ie: '您正在使用一个过时的网页浏览器。请<a href="http://browsehappy.com/" target="_blank">升级您的浏览器</a>或<a href="http://www.google.com/chromeframe/?redirect=true" target="_blank">开启 Google Chrome Frame</a> 来提高用户体验。'
   page_404_content: '页面将在数秒内自动跳转回 <a href="/">首页</a>'
   page_404_heading: '对不起，无法找到该页。'
+  previous_post: '上一篇'
   published: '发表信息'
   redirecting: '跳转中...'
   search: '搜索'
@@ -45,6 +52,8 @@ cn:
   search_results: '搜索结果'
   share_post: '分享本文：'
   show: '显示'
+  show_author: '显示作者'
   show_comments: '显示评论'
+  show_license: '显示许可证'
   tags: '文章标签'
   view: '查阅'
