--- a/starter-kit/_data/i18n.yml
+++ b/starter-kit/_data/i18n.yml
@@ -4,7 +4,7 @@ en:
   back_to_top: 'Back to Top'
   categories: 'Categories'
   close: 'Close'
-  copyright: '<p><small>Theme <a class="external" href="https://github.com/yizeng/jekyll-theme-simple-texture" target="_blank">Simple Texture</a> developed by <a class="external" href="http://yizeng.me" target="_blank">Yi Zeng</a>, powered by <a class="external" href="https://jekyllrb.com/" target="_blank">Jekyll</a>.</small></p>'
+  copyright: '<p><small>Theme <a href="https://github.com/yizeng/jekyll-theme-simple-texture" target="_blank">Simple Texture</a> developed by <a href="http://yizeng.me" target="_blank">Yi Zeng</a>, powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>.</small></p>'
   enter_blog: 'Enter Blog'
   last_updated: 'Last updated'
   menu: 'Menu'
@@ -33,7 +33,7 @@ cn:
   back_to_top: '返回顶部'
   categories: '文章分类'
   close: '关闭'
-  copyright: '<p><small>本博客主题 <a class="external" href="https://github.com/yizeng/jekyll-theme-simple-texture" target="_blank">Simple Texture</a> 由 <a class="external" href="http://yizeng.me" target="_blank">Yi Zeng</a> 基于 <a class="external" href="https://jekyllrb.com/" target="_blank">Jekyll</a> 开发.</small></p>'
+  copyright: '<p><small>本博客主题 <a href="https://github.com/yizeng/jekyll-theme-simple-texture" target="_blank">Simple Texture</a> 由 <a href="http://yizeng.me" target="_blank">Yi Zeng</a> 基于 <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> 开发.</small></p>'
   enter_blog: '进入博客'
   last_updated: '最后更新于'
   menu: '菜单'
