Revert to use gems instead of plugins in _config.yml
as GitHub Pages failed to build

--- a/starter-kit/_config.yml
+++ b/starter-kit/_config.yml
@@ -6,7 +6,7 @@ permalink: /blog/:year/:month/:day/:title/
 theme: jekyll-theme-simple-texture
 
 whitelist: [jekyll-feed, jekyll-redirect-from, jekyll-seo-tag, jekyll-sitemap]
-plugins:
+gems:
   - jekyll-feed
   - jekyll-redirect-from
   - jekyll-seo-tag
