--- a/starter-kit/Gemfile
+++ b/starter-kit/Gemfile
@@ -1,6 +1,6 @@
 source "https://rubygems.org"
 
-gem 'jekyll', '= 3.5.1' # locked in for stability.
+gem 'jekyll', '= 3.4.5' # locked in to be consistent GitHub Pages.
 gem 'jekyll-theme-simple-texture'
 
 group :jekyll_plugins do
