--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -4,7 +4,6 @@ en: &en
   back_to_top: 'Back to Top'
   categories: 'Categories'
   close: 'Close'
-  copyright: '<p><small>Theme <a href="https://github.com/yizeng/jekyll-theme-simple-texture" target="_blank">Simple Texture</a> developed by <a href="http://yizeng.me" target="_blank">Yi Zeng</a>, powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>.</small></p>'
   enter_blog: 'Enter Blog'
   last_updated: 'Last updated'
   menu: 'Menu'
@@ -26,6 +25,7 @@ en: &en
   show_comments: 'Show Comments'
   show_license: 'Show License'
   tags: 'Tags'
+  theme_info: '<p><small>Theme <a href="https://github.com/yizeng/jekyll-theme-simple-texture" target="_blank">Simple Texture</a> developed by <a href="http://yizeng.me" target="_blank">Yi Zeng</a>, powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>.</small></p>'
   view: 'View'
 en-us:
   <<: *en
@@ -43,7 +43,6 @@ zh: &zh
   back_to_top: '返回顶部'
   categories: '文章分类'
   close: '关闭'
-  copyright: '<p><small>本博客主题 <a href="https://github.com/yizeng/jekyll-theme-simple-texture" target="_blank">Simple Texture</a> 由 <a href="http://yizeng.me" target="_blank">Yi Zeng</a> 基于 <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> 开发.</small></p>'
   enter_blog: '进入博客'
   last_updated: '最后更新于'
   menu: '菜单'
@@ -66,6 +65,7 @@ zh: &zh
   show_comments: '显示评论'
   show_license: '显示许可证'
   tags: '文章标签'
+  theme_info: '<p><small>本博客主题 <a href="https://github.com/yizeng/jekyll-theme-simple-texture" target="_blank">Simple Texture</a> 由 <a href="http://yizeng.me" target="_blank">Yi Zeng</a> 基于 <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> 开发.</small></p>'
   view: '查阅'
 zh-cn:
   <<: *zh
