--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,11 @@ sass:
   style: compressed
 
 # Site Data
-url: # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: # the subpath of your site, e.g. /blog
-title: Simple Texture
-description: "A gem-based responsive simple texture styled Jekyll theme."
-keywords: 'jekyll,theme,gem-based,blog'
+url: http://beboldstreetministries.org
+baseurl: 
+title: Be Bold Street Ministries
+description: "Spreading the gospel of Jesus by providing for his children."
+keywords: 'ministry jesus homeless'
 author:
   name:
   job_title:
@@ -47,13 +47,13 @@ author:
     - name: vk
       url:
 home:
-  section1: <h1>Simple Texutre</h1>
-  section2: <h2>A gem-based responsive simple texture styled Jekyll theme</h2>
-  section3: <div class="social-links"><a class="ico-github btn" href="https://github.com/yizeng/jekyll-theme-simple-texture" title="View on GitHub"></a></div>
+  section1: <h1>Be Bold Street Ministries</h1>
+  section2: <h2>Spreading the gospel of Jesus by providing for his children.</h2>
+  section3: 
 blog:
-  cc_license: http://creativecommons.org/licenses/by-sa/4.0/ # A link to CC License of your choice.
-  cc_license_image: /assets/images/theme/cc-by-sa.png # An image of your CC License. 
-  footer_content: A gem-based responsive simple texture styled <a href="http://jekyllrb.com/">Jekyll</a> theme.
+  cc_license: 
+  cc_license_image: 
+  footer_content: Meeting the needs of the helpless
 
 disqus:
   shortname: # e.g. yizeng
