--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -4,7 +4,7 @@ en: &en
   back_to_top: 'Back to Top'
   categories: 'Categories'
   close: 'Close'
-  enter_blog: 'Enter Blog'
+  enter_blog: "What We have Done"
   last_updated: 'Last updated'
   menu: 'Menu'
   more: 'More'
