--- a/starter-kit/Gemfile
+++ b/starter-kit/Gemfile
@@ -1,11 +1,4 @@
 source "https://rubygems.org"
 
-gem 'jekyll', '= 3.7.3' # locked in to be consistent GitHub Pages.
 gem 'jekyll-theme-simple-texture'
-
-group :jekyll_plugins do
-  gem 'jekyll-feed'
-  gem 'jekyll-redirect-from'
-  gem 'jekyll-seo-tag'
-  gem 'jekyll-sitemap'
-end
+gem "github-pages", group: :jekyll_plugins
