--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ author:
 home:
   section1: <h1>Cero</h1>
   section2: <h2>We are cero team, and we want to make citizens' mobility climate-neutral</h2>
-  section3: <div class="social-links"><a class="ico-github btn" href="https://github.com/yizeng/jekyll-theme-simple-texture" title="View on GitHub"></a></div>
+  section3: <div class="social-links"><a class="ico-github btn" href="https://github.com/team-cero" title="View on GitHub"></a></div>
 blog:
   cc_license: http://creativecommons.org/licenses/by-sa/4.0/ # A link to CC License of your choice.
   cc_license_image: /assets/images/theme/cc-by-sa.png # An image of your CC License. 
