--- a/_config.yml
+++ b/_config.yml
@@ -21,13 +21,13 @@ sass:
   style: compressed
 
 # Site Data
-url: # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: # the subpath of your site, e.g. /blog
-title: Simple Texture
-description: "A gem-based responsive simple texture styled Jekyll theme."
-keywords: 'jekyll,theme,gem-based,blog'
+url:https://shell36524.github.io/HOMECABE
+baseurl: /HOMECABE
+title: 1st Project 'HOME CA:BE'
+description: 
+keywords: HOME CA:BE
 author:
-  name:
+  name: KIMSORA
   job_title:
   location:
   email:
@@ -35,7 +35,7 @@ author:
     - name: facebook
       url:
     - name: github
-      url: https://github.com/yizeng/jekyll-theme-simple-texture
+      url: https://github.com/shell36524/HOMECABE
     - name: instagram
       url:
     - name: linkedin
